# lazy-etherscan

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  settings.example.toml
.github/workflows/: rust.yml
data/: tokens.json
docs/: book.toml  index.html
docs/src/: README.md  SUMMARY.md
docs/src/guide/: configuration.md  installation.md  usage.md
docs/src/misc/: contributors.md
examples/: get_beacon_block.rs  rpc_get_block.rs
src/: app.rs  ethers.rs  main.rs  network.rs  route.rs  ui.rs  widget.rs
src/app/: address.rs  block.rs  event_handling.rs  statistics.rs  transaction.rs
src/ui/: common.rs  home.rs
src/ui/home/: address_info.rs  block.rs  latest_status.rs  searching.rs  statistics.rs  transaction.rs  welcome.rs
src/ui/home/block/: block_info.rs  fee_info.rs  gas_info.rs  transactions.rs  withdrawals.rs
utils/: SETUP_NODE.sh  SHUTDOWN_NODE.sh
