[package]
name = "lazy-etherscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "1.1.0"
chrono = "0.4.26"
ethers-core = "2.0.8"
ethers-providers = "2.0.8"
futures = "0.3.28"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
ratatui-tree-widget = { path = "./ratatui-tree-widget" }
clap = { version = "4.3.23", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"

[dependencies.crossterm]
version = "0.26.1"
features = ["event-stream"]
