[package]
name = "lazy-etherscan"
version = "0.1.1"
edition = "2021"
authors = ["woxjro <usuzawa.yoshi.55z@st.kyoto-u.ac.jp>"]
license = "MIT"
description = "Simple Terminal UI for the Ethereum Blockchain Explorer"
readme = "README.md"
homepage = "https://github.com/woxjro/lazy-etherscan"
repository = "https://github.com/woxjro/lazy-etherscan"
keywords = ["ethereum", "blockchain", "tui", "etherscan", "ratatui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "1.1.0"
chrono = "0.4.26"
ethers = "2.0.11"
futures = "0.3.28"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
#ratatui-tree-widget = { path = "./ratatui-tree-widget" }
clap = { version = "4.3.23", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"
toml = "0.8.4"
serde = "1.0.189"
url = "2.4.1"
tempfile = "3.9.0"

[dependencies.crossterm]
version = "0.26.1"
features = ["event-stream"]
